@@ -49,74 +49,119 @@
 #endif
 
 ///////////////////////////////////////////////////////////////////////////////
+
+H323AEC::BufferFrame::BufferFrame() 
+: receiveTime(0), echoTime(0), frame(0)
+{
+}
+
+H323AEC::BufferFrame::BufferFrame(PINDEX sz) 
+: receiveTime(0), echoTime(0), frame(sz)
+{
+    memset(frame.GetPointer(),0,sz);
+}
+
+H323AEC::BufferFrame::~BufferFrame()
+{
+    frame.SetSize(0);
+}
+
+H323_AECBuffer::H323_AECBuffer()
+: m_bufferTime(0), m_curPos(0)
+{
+
+}
+    
+H323_AECBuffer::~H323_AECBuffer()
+{
+ 
+}
+
+void H323_AECBuffer::Initialise(PINDEX size, PINDEX byteSize, PINDEX clockRate)
+{
+    PWaitAndSignal m(m_bufferMutex);
+
+    m_bufferTime = size * (byteSize/(clockRate/1000)/2);
+
+    for (PINDEX i=0; i < size; ++i)
+        (*this)[i] = *new H323AEC::BufferFrame(byteSize);
+}
+
+void H323_AECBuffer::ShutDown()
+{
+    PWaitAndSignal m(m_bufferMutex);
+
+    if (this->empty()) 
+        return;
+
+    std::map<unsigned, H323AEC::BufferFrame>::const_iterator it;
+    for (it= this->begin(); it!= this->end(); ++it)
+        this->erase(it++);
+}
+
+PBoolean H323_AECBuffer::Send(BYTE * buffer, unsigned & length)
+{
+    PWaitAndSignal m(m_bufferMutex);
+
+    if (this->empty()) {
+        PTRACE(6,"AEC\tEmpty!");
+        return false;
+    }
+
+    const H323AEC::BufferFrame & entry = (*this)[m_curPos];
+
+    if (entry.receiveTime == 0) {
+        PTRACE(6,"AEC\tFilling AEC Buffer");
+        return false;
+    }
+
+    memcpy(buffer, (const void *)entry.frame, length);
+    PTRACE(6,"AEC\tPlay Pos " << m_curPos << " " << entry.receiveTime << " " << PTimer::Tick().GetMilliSeconds() - entry.echoTime);
+    return true;
+}
+
+void H323_AECBuffer::Receive(BYTE * buffer, unsigned & length)
+{
+    PWaitAndSignal m(m_bufferMutex);
+
+    if (this->empty()) 
+        return;
+
+    H323AEC::BufferFrame & entry = (*this)[m_curPos];
+    entry.receiveTime = PTimer::Tick().GetMilliSeconds();
+    entry.echoTime = entry.receiveTime + m_bufferTime;
+    memcpy(entry.frame.GetPointer(), buffer, length);
+
+    m_curPos++;
+    if (m_curPos >= this->size())
+        m_curPos = 0;
+
+#if 0  // debugging
+    PTRACE(6,"AEC\tPosition " << m_curPos);
+    std::map<unsigned, H323AEC::BufferFrame>::const_iterator r = this->begin();
+    for (r = this->begin(); r != this->end(); ++r)
+        PTRACE(6,"AEC\t" << r->first << " " << r->second.receiveTime);
+#endif
+
+}
+
+
+///////////////////////////////////////////////////////////////////////////////
 #define TAIL 5
 
 H323Aec::H323Aec(int _clock, int _sampletime, int _buffers)
-  :  m_echoState(NULL), m_preprocessState(NULL), m_clockrate(_clock),
-     m_bufferTime(_sampletime*_buffers-1), m_bufferSize(_buffers-1),
-     m_sampleTime(_sampletime), m_BufferBytes(m_sampleTime*(m_clockrate/1000)),
-     m_tail(TAIL * m_BufferBytes), m_playRecDiff(0)
+  :  m_echoState(NULL), m_preprocessState(NULL), m_clockrate(_clock), m_samplesFrame(_sampletime*(m_clockrate/1000)), m_BufferBytes(2*m_samplesFrame),
+     m_echo_buf((spx_int16_t *)malloc(m_BufferBytes)), m_ref_buf((spx_int16_t *)malloc(m_BufferBytes)), m_temp_buf((spx_int16_t *)malloc(m_BufferBytes)),
+     m_tail(TAIL * m_samplesFrame)
 {
-     PTRACE(3, "AEC\tcreated AEC " << m_clockrate << " hz " << " buffer Size " << m_bufferTime << " ms." );
-}
 
+    m_buffer.Initialise( _buffers, m_BufferBytes, _clock);
 
-H323Aec::~H323Aec()
-{
-  PWaitAndSignal m(readwritemute);
-
-  if (m_echoState) {
-    speex_echo_state_destroy(m_echoState);
-    m_echoState = NULL;
-  }
-  
-  if (m_preprocessState) {
-    speex_preprocess_state_destroy(m_preprocessState);
-    m_preprocessState = NULL;
-  }
-
-  while (!m_echoBuffer.empty()) {
-    m_echoBuffer.front().frame.SetSize(0);
-    m_echoBuffer.pop();
-  }
-}
-
-
-void H323Aec::Receive(BYTE * buffer, unsigned & length)
-{
-  if (length == 0)
-	  return;
-
-  // prepare the BufferEntry
-  BufferFrame entry;
-  entry.receiveTime = PTimer::Tick().GetMilliSeconds();
-  entry.echoTime = entry.receiveTime + m_bufferTime;
-  entry.frame.SetSize(length);
-  memcpy(entry.frame.GetPointer(),buffer,length);
-
-readwritemute.Wait();
-  m_echoBuffer.push(entry);
-
-  if (m_echoBuffer.size() > m_bufferSize) {
-      PTRACE(5, "AEC\tRead Buffer full dropping frame!");
-      m_echoBuffer.front().frame.SetSize(0);
-      m_echoBuffer.pop();
-  }
-readwritemute.Signal();
-
-}
-
-void H323Aec::Send(BYTE * buffer, unsigned & length)
-{
-  short echo_buf[320], ref_buf[320], e_buf[320];
-
-// Inialise the Echo Canceller
-  if (m_echoState == NULL) {
-    m_echoState = speex_echo_state_init(m_BufferBytes, m_tail);
-    m_preprocessState = speex_preprocess_state_init(m_BufferBytes, m_clockrate);
+    m_echoState = speex_echo_state_init(m_samplesFrame, m_tail);
     speex_echo_ctl(m_echoState, SPEEX_ECHO_SET_SAMPLING_RATE, &m_clockrate);
-    speex_preprocess_ctl(m_preprocessState, SPEEX_PREPROCESS_SET_ECHO_STATE, m_echoState);
 
+    m_preprocessState = speex_preprocess_state_init(m_samplesFrame, m_clockrate);
+    speex_preprocess_ctl(m_preprocessState, SPEEX_PREPROCESS_SET_ECHO_STATE, m_echoState);
        int i=1;
        speex_preprocess_ctl(m_preprocessState, SPEEX_PREPROCESS_SET_DENOISE, &i);
        i=0;
@@ -129,54 +174,56 @@ void H323Aec::Send(BYTE * buffer, unsigned & length)
        speex_preprocess_ctl(m_preprocessState, SPEEX_PREPROCESS_SET_DEREVERB_DECAY, &f);
        f=.0;
        speex_preprocess_ctl(m_preprocessState, SPEEX_PREPROCESS_SET_DEREVERB_LEVEL, &f);
-  
-  }
 
-  if (m_echoBuffer.size() == 0)
+    PTRACE(3, "AEC\tcreated AEC " << m_clockrate << " hz " << " buffer Size " << _buffers );
+}
+
+
+H323Aec::~H323Aec()
+{
+    m_buffer.ShutDown();
+
+    free(m_echo_buf);
+    free(m_ref_buf);
+    free(m_temp_buf);
+
+    if (m_echoState) {
+        speex_echo_state_destroy(m_echoState);
+        m_echoState = NULL;
+    }
+
+    if (m_preprocessState) {
+        speex_preprocess_state_destroy(m_preprocessState);
+        m_preprocessState = NULL;
+    }
+}
+
+void H323Aec::Receive(BYTE * buffer, unsigned & length)
+{
+  if (length == 0)
 	  return;
 
-  PInt64 m_recTimeMax = PTimer::Tick().GetMilliSeconds();
-  PInt64 m_recTimeMin = m_recTimeMax - m_sampleTime;
-  
-  BufferFrame l_frame;
-  readwritemute.Wait();
-      l_frame = m_echoBuffer.front();
-      m_playRecDiff = m_recTimeMax - l_frame.echoTime;
-
-      while (m_playRecDiff > m_sampleTime && m_echoBuffer.size() > 0) {
-           m_echoBuffer.front().frame.SetSize(0);
-           m_echoBuffer.pop();
-           PTRACE(5, "AEC\tBuffer dropped too old " << m_playRecDiff << "Ms");
-           if (m_echoBuffer.size() > 0) {
-                l_frame = m_echoBuffer.front();
-                m_playRecDiff = l_frame.echoTime - m_recTimeMax;
-           }
-      }
-
-      if (l_frame.echoTime < m_recTimeMin || m_echoBuffer.size() == 0) {
-            PTRACE(5, "AEC\tFilling Buffer " << m_echoBuffer.size() << " Delta " << m_playRecDiff);
-            readwritemute.Signal();
-            return;
-      }
-   
-      PTRACE(6,"AEC\tPlay Delta " << m_playRecDiff << " sz: " << m_echoBuffer.size());
-      memcpy(echo_buf, l_frame.frame.GetPointer(), l_frame.frame.GetSize());
-      l_frame.frame.SetSize(0);
-      m_echoBuffer.pop();
-
-  readwritemute.Signal();
-
-  memcpy(ref_buf, buffer, length);
-
-  // Cancel the Echo/Noise in this frame 
-  speex_echo_playback(m_echoState,echo_buf);
-  speex_echo_capture(m_echoState,ref_buf, e_buf);
-  speex_preprocess_run(m_preprocessState, e_buf);
-
-  // Use the result of the echo cancelation as capture frame 
-  memcpy(buffer, e_buf, length);
+  m_buffer.Receive(buffer,length);
 
 }
+
+void H323Aec::Send(BYTE * buffer, unsigned & length)
+{
+
+  if (!m_buffer.Send((BYTE *)m_echo_buf,length))
+      return;
+
+  memcpy(m_ref_buf,buffer,length);
+
+  speex_echo_cancellation(m_echoState, m_ref_buf,
+                          m_echo_buf, m_temp_buf);
+
+  speex_preprocess_run(m_preprocessState, m_temp_buf);
+
+  memcpy(buffer,m_temp_buf,length);
+
+}
+
 #endif // H323_AEC
 
 
